--- a/about.html
+++ b/about.html
@@ -43,27 +43,26 @@
 
 <body>
     <main class="main--pages">
-        <section class="col--nav">
+        <section id="about-links" class="col--nav cms-editable">
             <ul class="content--nav">
-                <li>
+                <li class="cms-repeatable">
                     <h2>Email</h2>
                     <p><a href="mailto:info@mmmu.it">info@mmmu.it</a></p>
                 </li>
-                <li>
+                <li class="cms-repeatable">
                     <h2>Sostieni MU</h2>
                     <p><a href="https://form.jotform.com/221662148400043" target="_blank">Compila il form online</a></p>
                 </li>
-                <li>
+                <li class="cms-repeatable">
                     <h2>Newsletter</h2>
                     <p><a href="http://eepurl.com/hd1_zn" target="_blank">Iscriviti</a></p>
                 </li>
             </ul>
         </section>
-        <section class="col--content">
+        <section id="about-info" class="col--content cms-editable">
             <div class="content--block">
                 <p>MU è un'organizzazione indipendente e un collettivo dedito al suono e alle pratiche spaziali, nato
-                    dalla sinergia tra i fondatori Enrico Malatesta, Giovanni Lami e Glauco Salvo.
-                </p>
+                    dalla sinergia tra i fondatori Enrico Malatesta, Giovanni Lami e Glauco Salvo.</p>
                 <p>MU agisce in collaborazione con artisti, ricercatori italiani ed internazionali, attraverso
                     l'ideazione e la presentazione di attività, concerti, performance, ascolti guidati e iniziative
                     volte alla sperimentazione in ambiti quali musica, sound art, ecologia e pedagogia.</p>
@@ -90,7 +89,6 @@
                     </div>
                 </div>
             </div>
-
         </section>
         <div class="nav--btn">
             <h3 class="btn--menu"><a href="index.html">Me<br>nu</a></h3>
