--- a/eventi.html
+++ b/eventi.html
@@ -43,9 +43,9 @@
 
 <body>
     <main class="main--pages">
-        <section class="col--nav --no-scrollbar" id="event--nav">
+        <section id="event--nav" class="col--nav --no-scrollbar cms-editable">
             <ul class="content--nav">
-                <li class="nav--link">
+                <li class="nav--link cms-repeatable">
                     <h2><a class="js-href" href="2021">2021</a></h2>
                 </li>
                 <li class="nav--link">
@@ -64,12 +64,11 @@
                     <h2><a class="js-href" href="2016">2016</a></h2>
                 </li>
             </ul>
-
         </section>
-        <section class="col--content" id="event--list">
+        <section id="event--list" class="col--content cms-editable">
             <ul>
                 <!-- 2021 -->
-                <li class="content--block" id="2021">
+                <li id="2021" class="content--block cms-repeatable">
                     <div class="content--list">
                         <a href="2021/122021-901-editions-showcase.html">
                             <h2>11.12.2021</h2>
@@ -274,111 +273,6 @@
                         </a>
                     </div>
                 </li>
-
-                <!-- <li class="content--block">
-                    <div class="content--list">
-                        <a href="2018/052018-claudio-rocchetti.html">
-                            <h2>25.5.2018</h2>
-                            <h3>Claudio Rocchetti – Goldberg Variations</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="2018/052018-carozzi-safari.html">
-                            <h2>26.5.2018</h2>
-                            <h3>Massimo Carozzi – Safari</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="2018/052018-vaaalr.html">
-                            <h2>26.5.2018</h2>
-                            <h3>VA AA LR - Concert for Signal Flares</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="2018/052018-carozzi-reframing-suond.html">
-                            <h2>26.5.2018</h2>
-                            <h3>Massimo Carozzi – Reframing sound</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="2018/052018-marea-helicotrema.html">
-                            <h2>25-26.5.2018</h2>
-                            <h3>MU & Helicotrema</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="2018/052018-davide-tidoni.html">
-                            <h2>25-26.5.2018</h2>
-                            <h3>Davide Tidoni – Touch of the Pops</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="2018/052018-dom-milieu.html">
-                            <h2>20.5.2018</h2>
-                            <h3>DOM- – Milieu. Pratiche per farsi ambiente</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="2018/052018-aliossi.html">
-                            <h2>20.5.2018</h2>
-                            <h3>Aliossi</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="2018/052018-casas-tricoli-bellows.html">
-                            <h2>19.5.2018</h2>
-                            <h3>Casas / Tricoli / Bellows</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="2018/052018-elena-biserna.html">
-                            <h2>19.5.2018</h2>
-                            <h3>Elena Biserna – Musiche e ascolti peripatetici</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="">
-                            <h2>19.5.2018</h2>
-                            <h3>Janneke van der Putten – Voice and Space</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="">
-                            <h2>18.5.2018</h2>
-                            <h3>Carlos Casas – Fieldworks</h3>
-                        </a>
-                    </div>
-                </li>
-                <li class="content--block">
-                    <div class="content--list">
-                        <a href="">
-                            <h2>18.5.2018</h2>
-                            <h3>Janneke van der Putten – Solo</h3>
-                        </a>
-                    </div>
-                </li> -->
 
                 <li class="content--block">
                     <div class="content--list">
