--- a/tule.html
+++ b/tule.html
@@ -43,26 +43,12 @@
 
 <body>
     <main class="main--pages">
-        <section class="col--nav">
+        <section id="page-image" class="col--nav cms-editable">
             <div class="content--image">
                 <img src="assets/uploads/eventi/tule/tule-general.png">
             </div>
-            <!-- <ul class="content--nav">
-                <li>
-                    <h2><a href="/mu/2021/082021-tule.html">Tule 2021</a></h2>
-                </li>
-                <li>
-                    <h2><a href="/mu/2020/082020-tule.html">Tule 2020</a></h2>
-                </li>
-                <li>
-                    <h2><a href="/mu/2018/012018-tule.html">Tule 2018</a></h2>
-                </li>
-                <li>
-                    <h2><a href="/mu/2016/102016-tule.html">Tule 2016</a></h2>
-                </li>
-            </ul> -->
         </section>
-        <section class="col--content">
+        <section id="page-copy" class="col--content cms-editable">
             <div class="content--block">
                 <h2>TULE – Pratiche di ascolto attivo, soundworks e soundwalk per il fiume</h2>
             </div>
@@ -78,16 +64,16 @@
             </div>
             <div class="content--block">
                 <ul class="content--nav">
-                    <li>
+                    <li class="cms-repeatable">
                         <h2><a href="2021/082021-tule.html">Tule 2021</a></h2>
                     </li>
-                    <li>
+                    <li class="cms-repeatable">
                         <h2><a href="2020/082020-tule.html">Tule 2020</a></h2>
                     </li>
-                    <li>
+                    <li class="cms-repeatable">
                         <h2><a href="2018/012018-tule.html">Tule 2018</a></h2>
                     </li>
-                    <li>
+                    <li class="cms-repeatable">
                         <h2><a href="2016/102016-tule.html">Tule 2016</a></h2>
                     </li>
                 </ul>
