--- a/3eco-cienfuegos.html
+++ b/3eco-cienfuegos.html
@@ -43,23 +43,23 @@
 
 <body>
     <main class="main--pages">
-        <section class="col--nav">
+        <section id="page-links" class="col--nav cms-editable">
             <ul class="content--nav">
-                <li class="nav--link">
+                <li class="nav--link cms-repeatable">
                     <h2><a class="js-href" href="spazio-1">Spazio 1</a></h2>
                 </li>
-                <li class="nav--link">
+                <li class="nav--link cms-repeatable">
                     <h2><a class="js-href" href="spazio-2">Spazio 2</a></h2>
                 </li>
-                <li class="nav--link">
+                <li class="nav--link cms-repeatable">
                     <h2><a class="js-href" href="spazio-3">Spazio 3</a></h2>
                 </li>
-                <li class="nav--link">
+                <li class="nav--link cms-repeatable">
                     <h2><a class="js-href" href="spazio-4">Spazio 4</a></h2>
                 </li>
             </ul>
         </section>
-        <section class="col--content">
+        <section id="page-copy" class="col--content cms-editable">
             <div class="content--block">
                 <h2>3ECO – Cienfuegos</h2>
             </div>
@@ -85,53 +85,52 @@
                 <p>La "caccia" deve essere svolta da soli e camminando.</p>
                 <p>Le tracce per trovare gli spazi sono alcuni segni/murales/scritte trovati nella città di Cesena.</p>
             </div>
-            <div class="content--block" id="spazio-1">
+            <div id="spazio-1" class="content--block cms-repeatable">
                 <h2>Spazio 1</h2>
                 <p>NESSUNO È ILLEGALE | chi esce col cane portare dietro la paletta e i guanti grazie</p>
             </div>
-            <div class="content--block content--image">
+            <div class="content--block content--image cms-repeatable">
                 <img src="assets/uploads/eventi/3eco/spazio-1.jpeg">
             </div>
-            <div class="content--block">
+            <div class="content--block cms-repeatable">
                 <p>Riverberi ed eco iniziano all'altezza di questa scritta. Mantenendola alla vostra destra gli effetti
                     sonori continuano per tutta la Via fino all'incrocio.</p>
                 <p><u>Battere sonoramente le mani per attivare il suono</u>.</p>
             </div>
 
-            <div class="content--block" id="spazio-2">
+            <div id="spazio-2" class="content--block cms-repeatable">
                 <h2>Spazio 2</h2>
                 <p>Edicola Votiva</p>
             </div>
-            <div class="content--block content--image">
+            <div class="content--block content--image cms-repeatable">
                 <img src="assets/uploads/eventi/3eco/spazio-2.jpeg">
             </div>
-            <div class="content--block">
+            <div class="content--block cms-repeatable">
                 <p>L'edicola è posta nell'angolo di un edificio in cui è presente una corte interna, quasi sempre
                     accessibile, in cui sono presenti poderosi effetti sonori.</p>
                 <p><u>Battere sonoramente le mani per attivare il suono</u>.</p>
             </div>
 
-            <div class="content--block" id="spazio-3">
+            <div id="spazio-3" class="content--block cms-repeatable">
                 <h2>Spazio 3</h2>
                 <p>reaGIAMO Forlì | Pakie</p>
             </div>
-            <div class="content--block content--image">
+            <div class="content--block content--image cms-repeatable">
                 <img src="assets/uploads/eventi/3eco/spazio-3.jpeg">
             </div>
-            <div class="content--block">
+            <div class="content--block cms-repeatable">
                 <p><u>Battere sonoramente le mani per attivare il suono</u>.</p>
             </div>
 
-            <div class="content--block" id="spazio-4">
+            <div id="spazio-4" class="content--block cms-repeatable">
                 <h2>Spazio 4</h2>
                 <p>tra la TEXTURE A ROMBI COLORATI E STELLE e la FIGURA STILIZZATA</p>
             </div>
-            <div class="content--block content--image">
-
+            <div class="content--block content--image cms-repeatable">
                 <img src="assets/uploads/eventi/3eco/cover-punto-b.jpeg">
                 <img src="assets/uploads/eventi/3eco/spazio-4.jpeg">
             </div>
-            <div class="content--block">
+            <div class="content--block cms-repeatable">
                 <p>In questo spazio, da anni, si sente un suono a volume minimo, una sorta di sibilo che emerge di tanto
                     in tanto assieme a un fruscio (simile a rumore bianco) ma di cui non ho ancora stabilito la fonte.
                     Voi cosa sentite?? Sarei felice di ricevere un vostro riscontro in merito a questo fenomeno …</p>
