--- a/elementi.html
+++ b/elementi.html
@@ -43,12 +43,12 @@
 
 <body>
     <main class="main--pages">
-        <section class="col--nav">
+        <section id="page-image" class="col--nav cms-editable">
             <div class="content--image">
                 <img src="assets/uploads/eventi/elementi/elementi-cover.jpeg">
             </div>
         </section>
-        <section class="col--content">
+        <section id="page-copy" class="col--content cms-editable">
             <div class="content--block">
                 <h2>Elementi</h2>
             </div>
@@ -65,10 +65,10 @@
             </div>
             <div class="content--block">
                 <ul class="content--nav">
-                    <li>
+                    <li class="cms-repeatable">
                         <h2><a href="">Elementi 2022</a></h2>
                     </li>
-                    <li>
+                    <li class="cms-repeatable">
                         <h2><a href="">Elementi 2021</a></h2>
                     </li>
                 </ul>
