--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </div>
         </footer>
     </main>
-    <!-- <canvas id="canvas"></canvas> -->
-    <!-- <script src="canvas.js"></script> -->
+    <canvas id="canvas"></canvas>
+    <script src="canvas.js"></script>
     <script src="script.js"></script>
 </body>
 
